# summarizer

./: .editorconfig  .gitignore  README.md  abstractive.py  app.py  crawler.py  finetune.ipynb  finetune.py  finetune_and_val.ipynb  gemini.py  main.py  pyproject.toml  text_rank.py  val.ipynb  val.py  vietnamese_news_dataset.json
src/: abstractive.py  text_rank.py  vnexpress_crawler.py
